--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     ports:
       - "4200:4200" # specify port mapping
   express: # name of the second service
-    build: express-server # specify the directory of the Dockerfile
+    build: express-app # specify the directory of the Dockerfile
     ports:
       - "3000:3000" #specify ports mapping
     links:
